Fixed social icons alignment

--- a/tobias/tobiasfyi/static/sass/tobiasfyi.scss
+++ b/tobias/tobiasfyi/static/sass/tobiasfyi.scss
@@ -251,6 +251,7 @@
   ul.contact-icons {
     list-style: none;
     display: flex;
+    margin: 0;
     li {
       padding: 1rem;
       
